# jax_drb

./: .gitignore  .readthedocs.yaml  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs_pages.yml  publish_pypi.yml
benchmarks/: bench_hw2d_step.py
docs/: cli.md  development.md  examples.md  getting-started.md  index.md  inputs-outputs.md  references.md  roadmap.md  testing.md  validation.md
docs/api/: index.md
docs/fci/: index.md
docs/geometry/: index.md  slab.md  tabulated.md  tokamak.md
examples/: README.md  run_circular_tokamak.py  run_cyclone_salpha.py  run_pyqsc_stellarator.py  run_slab_scan.py  run_tabulated_geom.py
tests/: conftest.py  helpers.py  test_arnoldi_dense_compare.py  test_braginskii_coefficients.py  test_braginskii_scalings.py  test_em_model.py  test_essos_geometry_optional.py  test_fci_parallel.py  test_fd_1d_operators.py  test_fd_poisson_cg.py  test_gdb2018_saw.py  test_growth_vs_eigs.py  test_hot_ion_model.py  test_hw2d_linear_mode_time_integration.py  test_hw2d_validation.py  test_ideal_ballooning.py  test_import.py  test_known_limits.py  test_lp_fixed_point.py  test_mms_hw2d.py  test_mpse_bohm.py  test_mpse_loizu2012.py  test_mpse_loizu2012_consistency.py  test_mpse_loizu2012_hot_ion_Ti.py  test_neutrals_exchange.py  test_new_features.py  test_nonlinear_brackets.py  test_nonlinear_poisson.py  test_plotting_json.py  test_polarization_models.py  test_sheath_closure.py  test_sheath_closure_hot_ion.py  test_sheath_heat_see.py  test_slab_dispersion.py  test_tokamak_geometry.py  test_user_bcs.py
(+175 files in other folders)
