[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jaxdrb"
version = "0.1.0"
description = "Cold-ion drift-reduced Braginskii linear stability solver in JAX"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "jax>=0.4.30",
  "equinox>=0.11.0",
  "diffrax>=0.6.0",
  "optax>=0.2.0",
  "jaxopt>=0.8.0",
  "numpy>=1.24",
  "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.6",
  "black>=24",
]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.27",
  "mkdocs-gen-files>=0.5",
  "mkdocs-literate-nav>=0.6",
  "pymdown-extensions>=10",
]
essos = [
  "essos",
]

[project.scripts]
jaxdrb-scan = "jaxdrb.cli.main:main"
jaxdrb-scan2d = "jaxdrb.cli.scan2d:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
ignore = ["E741"]
per-file-ignores = { "examples/**/*.py" = ["E402"] }

[tool.black]
line-length = 100
target-version = ["py310"]
